# etc/openapi-min.yaml
@@ -59,9 +59,11 @@ paths:
     post:
       summary: Save an element
       description: |
-        Allow to save an element that is not a document i.e., a field, a decision or form. If you want to add documents, use the appropriate API method.
+        Allow to save an element i.e., a field, a decision, a form, a principal or document.
 
+        If is a document you need to pass a document reference using the 'id' attribute.
         If values already exist for the provided element code, it replaces them with the new ones, otherwise it creates them.
+        The values of the previous elements that no longer exist will be deleted.
         To remove an element, use the appropriate API method.
       operationId: actionsSaveElement
       tags:
@@ -73,7 +75,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ElementValueOrArrayValue"
+              $ref: "#/components/schemas/TaskElementValueOrArrayValue"
       responses:
         "200":
           description: Task with element filled
@@ -84,15 +86,15 @@ paths:
         default:
           $ref: "#/components/responses/DefaultError"
 
-  /tasks/{id}/~actions/save-element-document:
+  /tasks/{id}/~actions/save-element-value-document:
     post:
       summary: Save an element document
       description: |
-        Allow to save an element document.
+        Allow to save an element document uploading the content.
 
         If it is a multiple element, and the Id referenced in the body does not exist or is empty, the document will be added to the element.
         If the element already exists (the Id referenced in the body corresponds to an existing one), it updates it.
-      operationId: actionsSaveElementDocument
+      operationId: actionsSaveElementValueDocument
       tags:
         - task
       parameters:
@@ -105,16 +107,16 @@ paths:
               type: object
               properties:
                 json:
-                  $ref: "#/components/schemas/SaveElementDocumentCommand"
+                  $ref: "#/components/schemas/SaveElementValueDocumentCommand"
                 file:
                   type: string
                   format: binary
               required:
                 - json
                 - file
-            # encoding:
-            #   file:
-            #     contentType: image/*, application/pdf
+          #  encoding:
+          #    file:
+          #      contentType: image/*, application/pdf
       responses:
         "200":
           description: Task with element filled
@@ -151,14 +153,14 @@ paths:
         default:
           $ref: "#/components/responses/DefaultError"
 
-  /tasks/{id}/~actions/delete-element-document:
+  /tasks/{id}/~actions/delete-element-value-document:
     post:
       summary: Delete an element document value
       description: |
         Allow to delete a specific document from an element of document type using its id.
 
         Note: If it is a multiple item, it will only delete the specified document. If it is a single element, in addition to the document, it will also delete the element.
-      operationId: actionsDeleteDocument
+      operationId: actionsDeleteValueDocument
       tags:
         - task
       parameters:
@@ -168,7 +170,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DeleteElementDocumentCommand"
+              $ref: "#/components/schemas/DeleteElementValueDocumentCommand"
       responses:
         "200":
           description: Task elements deleted
@@ -280,7 +282,7 @@ components:
         - COMPLETED
         - CANCELLED
 
-    ElementValueOrArrayValue:
+    TaskElementValueOrArrayValue:
       type: object
       properties:
         code:
@@ -304,14 +306,15 @@ components:
           oneOf:
             - type: string
             - type: number
+            - $ref: "#/components/schemas/TaskElementValueDocument"
             - type: object
+            - $ref: "#/components/schemas/TaskElementValuePrincipal"
 
-    ElementValueDocument:
+    TaskElementValueDocument:
       type: object
       properties:
         id:
           type: string
-          format: uuid
         name:
           type: string
         contentPath:
@@ -322,7 +325,21 @@ components:
           type: integer
           format: int64
 
-    SaveElementDocumentCommand:
+    TaskElementValuePrincipal:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        type:
+          $ref: "#/components/schemas/PrincipalType"
+        name:
+          type: string
+      required:
+        - id
+        - type
+
+    SaveElementValueDocumentCommand:
       type: object
       properties:
         id:
@@ -333,6 +350,8 @@ components:
         valid:
           type: boolean
           default: true
+      required:
+        - code
 
     Task:
       allOf:
@@ -353,30 +372,25 @@ components:
               format: uuid
             activityToken:
               type: string
-              description: When create a Kuflow Task backed with a Temporal.io servers, this value is required and must be setted with the context task token of Temporal.io activity
+              description: When create a Kuflow Task backed with a Temporal.io servers, this value is required and must be set with the context task token of Temporal.io activity
             activityResponseVersion:
               type: string
-              description: When create a Kuflow Task backed with a Temporal.io servers, this value is required and must be setted with the activity version response.
+              description: When create a Kuflow Task backed with a Temporal.io servers, this value is required and must be set with the activity version response.
             elementValues:
               type: object
-              description: A ElementValueDocument or an array of ElementValueDocument is not allowed in any type of requests
+              description: An ElementValueDocument or an array of ElementValueDocument is not allowed in any type of requests
               additionalProperties:
                 oneOf:
                   - $ref: "#/components/schemas/TaskElementValue"
                   - type: array
                     items:
                       $ref: "#/components/schemas/TaskElementValue"
-                  - $ref: "#/components/schemas/ElementValueDocument"
-                  - type: array
-                    items:
-                      $ref: "#/components/schemas/ElementValueDocument"
             logs:
               type: array
               readOnly: true
               items:
                 $ref: "#/components/schemas/Log"
             owner:
-              readOnly: true
               allOf:
                 - $ref: "#/components/schemas/Principal"
           required:
@@ -437,6 +451,9 @@ components:
           $ref: "#/components/schemas/PrincipalType"
         name:
           type: string
+      required:
+        - id
+        - type
 
     PrincipalType:
       type: string
@@ -454,13 +471,12 @@ components:
       required:
         - code
 
-    DeleteElementDocumentCommand:
+    DeleteElementValueDocumentCommand:
       type: object
       properties:
         documentId:
           description: Document Id to delete
           type: string
-          format: uuid
       required:
         - documentId
 
